--- a/angular.json
+++ b/angular.json
@@ -23,13 +23,13 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              {
+                "input": "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
+              },
               "src/styles.css"
             ],
-            "scripts": [
-              "./node_modules/moment/src/moment.js",
-              "./node_modules/moment-timezone/moment-timezone.js"
-            ]
+            "scripts": ["./node_modules/moment/src/moment.js",
+              "./node_modules/moment-timezone/moment-timezone.js"]
           },
           "configurations": {
             "production": {
@@ -76,7 +76,9 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              {
+                "input": "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
+              },
               "src/styles.css"
             ],
             "scripts": [],
