--- a/package.json
+++ b/package.json
@@ -11,19 +11,21 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "8.0.1",
-    "@angular/cdk": "~8.0.1",
-    "@angular/common": "8.0.1",
-    "@angular/compiler": "8.0.1",
-    "@angular/core": "8.0.1",
-    "@angular/forms": "8.0.1",
-    "@angular/http": "7.2.15",
-    "@angular/material": "^8.0.1",
-    "@angular/platform-browser": "^8.0.1",
-    "@angular/platform-browser-dynamic": "^8.0.1",
-    "@angular/router": "^8.0.1",
+    "@angular/animations": "^6.1.0",
+    "@angular/cdk": "^6.2.0",
+    "@angular/common": "^6.1.0",
+    "@angular/compiler": "^6.1.0",
+    "@angular/core": "^6.1.0",
+    "@angular/forms": "^6.1.0",
+    "@angular/http": "^6.1.0",
+    "@angular/material": "^6.4.7",
+    "@angular/platform-browser": "^6.1.0",
+    "@angular/platform-browser-dynamic": "^6.1.0",
+    "@angular/router": "^6.1.0",
+    "@types/moment": "^2.13.0",
+    "@types/moment-timezone": "^0.5.12",
+    "angular-material": "^1.1.19",
     "core-js": "^2.5.4",
-    "hammerjs": "^2.0.8",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.25",
     "rxjs": "~6.2.0",
@@ -31,15 +33,13 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.8.0",
-    "@angular/cli": "8.0.3",
-    "@angular/compiler-cli": "8.0.1",
-    "@angular/language-service": "8.0.1",
+    "@angular/cli": "~6.2.4",
+    "@angular/compiler-cli": "^6.1.0",
+    "@angular/language-service": "^6.1.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/moment": "^2.13.0",
-    "@types/moment-timezone": "^0.5.12",
     "@types/node": "~8.9.4",
-    "codelyzer": "5.1.0",
+    "codelyzer": "~4.3.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.0.0",
